--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       margin: 0;
       padding: 0;
       font-family: 'Arial', sans-serif;
-      background: url('IMG-20241008-WA0012.jpg') no-repeat center center/cover;
+      background: url('IMG-20240824-WA0061.jpg') no-repeat center center/cover;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -155,8 +155,16 @@
       तू मेरी जिंदगी की वो रोशनी है, <br>
       जो हर अंधेरे में उजाला करती है।💕
     </p>
+
+    
+    <p>લખું તો લખું શું?
+બોલું તો બોલું શું?
+તારા માટે 🩷
+બસ ખાસ છે તું
+મારા માટે... ❣</p>
+
     <p>Let’s make memories today that we’ll cherish forever. 🥳</p>
-    <button onclick="alert('Heyyy!!! Its my Dobu\'s birthday,\nMany many happy returns of the day dobu, njoy ur day as well as ni8, On this day in 2003 khbr nahti k mari dobu no birth thase ne in 2019 i found uhh as my bff, thankyou for always being there in my ups and downs, sorry for all the neusense i created this year but i swear to be with uhh in ur each and every situation. Thanks for being my bestfriend, i know u deserve more than i give but i will always give uhh the best of mine... Once again Happiest birthday meri pyaari Dobu...\nYours only Chomu Best Friend...\nMiss uhh bou bdhu dobu... 🥺🥺🥺\nLove uhh so much... ❣❣❣ 🎉')">Send Love 💌</button>
+    <button onclick="alert('Heyyy!!! Its my Dobu\'s birthday,\nMany many happy returns of the day Dobu, njoy ur day as well as ni8, On this day in 2003 khbr nahti k mari dobu no birth thase ne in 2019 I found uhh as my bff, thankyou for always being there in my ups and downs, sorry for all the neusense I created this year but I swear to be with uhh in ur each and every situation. Thanks for being my bestfriend, I know u deserve more than I give but I will always give uhh the best of mine... Once again Happiest birthday meri pyaari Dobu...\nYours only Chomu Best Friend...\nMiss uhh bou bdhu Dobu... 🥺🥺🥺\nLove uhh so much... ❣❣❣ 🎉')">Send Love 💌</button>
   </div>
 </body>
 </html>
